# yolo-cpp-webassembly-video-object-detector

./: .eslintrc  .gitignore  README.md  esbuild.client.js  esbuild.server.js  package.json  settings.json
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
_.github/actions/: action.yml
_.github/workflows/: build.yml  static.yml
src/client/: App.tsx  index.ts
src/server/: App.tsx  index.ts
webassembly/: CMakeLists.txt  build-wasm.sh
webassembly/cpp/: yolo.cpp
webassembly/src/: utils.ts
